chore(build): remove obsolete `runOnJava11` and `runOnJava21` task definitions